<resources>
    <string name="app_name">Life Collage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout_text">Logout</string>
    <string name="about_text">About</string>
    <string name="my_collage_text">My Collage</string>
    <string name="pass_text">Pass</string>
    <string name="search_for_users_hint">Search by username...</string>
    <string name="log_in_text">Log In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="firstName_hint">First Name</string>
    <string name="lastName_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <u>Sign Up</u></string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="already_have_an_account_log_in">Already have an account? <u>Log In</u></string>
    <string name="account_text">Account</string>
    <string name="collage_title_text">Collage Title</string>
    <string name="edit_title">Edit</string>
    <string name="delete_title">Delete</string>
    <string name="about_message"><i><b>Life Collage</b></i> is the result of DevelopmentNow\'s Velocity program. Velocity is a 5 week incubator for Junior Developers. \n\nIn this session of the Velocity program, Caleb Stevenson and Sheena Do decided to build <i><b>Life Collage</b></i>, a picture lifestyle app. <i><b>Life Collage</b></i> allows users to take pictures and add them to a collage. There are no tags, captions or comments, because we believe the pictures should speak for themselves. Users can also search for other users and view their collages. \n\nNow, we\'ve all seen this type of app before. The thing that sets <i><b>Life Collage</b></i> apart is the ability to <i>pass</i> collages from one user to another. \n\nThis means if Kate passes her <i>collage</i> to Josh, she is entrusting its care to him. Josh now becomes the owner of that <i>collage</i>. Josh can add pictures to the <i>collage</i> until he decides to pass it off to Abby. And so on and so forth. The other interesting thing about passing is that since it uses Bluetooth, you actually have to be close enough to the other user in order to pass the collage. We think this creates an interesting tie to time and space that other sharing methods can\'t create. \n\n We hope you enjoy <i><b>Life Collage</b></i>!\n\n- Sheena &amp; Caleb \n\nhttps://developmentnow.com \n\nIcon made by Freepik from www.flaticon.com</string>
    <string name="search_text">Search</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_message">Are you sure you would like to delete your account?</string>
    <string name="edit_collage_title">Edit Collage Title</string>
    <string name="new_collage_title">New Collage</string>
    <string name="delete_collage_title">Delete Collage</string>
    <string name="delete_collage_message">Are you sure you would like to delete this collage?</string>
    <string name="collage_name_hint">Collage Name</string>
    <string name="no_search_results">Sorry, there were no results that matched your search.</string>
    <string name="try_searching_message">Try searching for a user by their username.</string>
    <string name="take_picture_message">Take a picture to add to your collage by tapping the camera icon below!</string>
    <string name="change_email_label">Edit Email:</string>
    <string name="save_change_button">Save Change</string>
    <string name="delete_account_warning">If you delete your account all of your pictures and collages will be permanently deleted.</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="search_bar_title">search</string>
    <string name="empty_collage_message">This collage is empty.</string>
    <string name="received_collage_dialog_title">You Received a Collage!</string>
    <string name="received_collage_dialog_message">Check your collage list to see your new collage. Add a picture and pass it on.</string>
    <string name="pass_title">Pass</string>
    <string name="tagline">Life in pictures</string>
</resources>
